# oscal-wizard

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  PROJECT_PLAN.md  README.md  UX_PAGE_PLAN.md  coding_standards.md  docker-compose.yml  main.py  package.json  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_create_users.py  0002_create_workspaces.py  0003_add_workspace_updated_at.py  0004_add_workspace_owner_id.py
docs/: auth_plan.md
engine/: __init__.py  audit.py  db.py  export.py  ids.py  models.py  users.py  validate.py  workspace.py  workspaces.py
engine/catalog/: __init__.py  loader.py  manifest.py  paths.py
engine/components/: __init__.py  loader.py
engine/diff/: __init__.py  json_diff.py  narrative_diff.py
engine/oscal/: __init__.py  ssp.py
scripts/: build-uswds.mjs  fetch_nist_catalogs.py  update_uswds_assets.py
tests/: test_admin_user_detail.py  test_admin_user_detail_missing.py  test_admin_users_page.py  test_admin_users_sorting.py  test_auth_button_visibility.py  test_auth_guards.py  test_catalog_loader.py  test_component_loader.py  test_control_interview_route.py  test_control_picker_route.py  test_csrf.py  test_diff_route.py  test_diff_utils.py  test_export_route.py  test_golden_export.py  test_health.py  test_inventory_route.py  test_logout_redirect.py  test_parties_route.py  test_smoke.py  test_uswds_assets.py  test_validate.py  test_validate_route.py  test_workspace_delete_flow.py  test_workspace_detail_page.py  test_workspace_export_content.py  test_workspace_export_headers.py  test_workspace_export_missing.py  test_workspace_export_pretty.py  test_workspace_import_created_at.py  test_workspace_import_success.py  test_workspace_import_validation.py  test_workspace_name_normalization.py  test_workspace_name_validation.py  test_workspace_rename_csrf.py  test_workspace_rename_flow.py  test_workspace_rename_missing.py  test_workspace_rename_payload.py  test_workspace_sorting.py  test_workspaces_page.py
tests/fixtures/: workspace.json
tests/golden_exports/: ssp.json
web/: __init__.py  app.py  auth.py  security.py  settings.py  state.py
web/routes/: __init__.py  admin.py  auth.py  control_interview.py  controls.py  diff_view.py  export.py  health.py  (+11 more)
(+26 files in other folders)
