[project]
name = "oscal-wizard"
version = "0.1.0"
description = "Open OSCAL Wizard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "authlib>=1.3.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.4",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.uv]
package = false
