[project]
name = "oscal-wizard"
version = "0.1.0"
description = "Open OSCAL Wizard"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "authlib>=1.3.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.1",
  "jinja2>=3.1.4",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["engine", "web"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
files = ["engine", "web", "main.py"]
exclude = "^tests/"

[[tool.mypy.overrides]]
module = ["authlib.*"]
ignore_missing_imports = true

[tool.uv]
package = false
